deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketpulse-api-service
spec:
  type: ClusterIP
  selector:
    app: marketpulse-api
  ports:
  - port: 8000
    targetPort: 8000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: marketpulse-dashboard-service
spec:
  type: NodePort
  selector:
    app: marketpulse-dashboard
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30501
    name: http
